--- a/front/package.json
+++ b/front/package.json
@@ -19,8 +19,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
-    "hammerjs": "^2.0.8",
     "draft-js": "^0.11.7",
+    "hammerjs": "^2.0.8",
     "moment": "^2.29.3",
     "prettier": "^2.6.2",
     "react": "^18.0.0",
@@ -31,7 +31,7 @@
     "react-heatmap-grid": "^0.9.0",
     "react-page-scroller": "^2.2.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slideshow-image": "^3.7.3",
     "react-spinners": "^0.11.0",
     "react-toastify": "^9.0.1",
